changed .min.js to full js

--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@
 		</div>
 		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" ></script>
 		<script type="text/javascript" src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-		<script type="text/javascript" src="js/sign_changer.min.js"></script>
+		<script type="text/javascript" src="js/sign_changer.js"></script>
 	</body>
 </html>
