--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				Copyright &copy; 2014 &bull; <a href="http://overzealouspelican.com">OZP Development</a>
 			</footer>
 		</div>
-		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" ></script>
+		<script type="text/javascript" src="js/jquery.mobile-1.4.0.min.js" ></script>
 		<script type="text/javascript" src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="js/sign_changer.js"></script>
 	</body>
