--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Sign Changer</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet" />
+		<link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet" />
 		<link href="css/sign_changer.css" rel="stylesheet" />
 		<meta name="description" content="Quickly Determine What Letters You Need To Change Your Slide In Letter Sign!"> 
 		<meta http-equiv="content-type" content="text/html;charset=UTF-8">
@@ -15,7 +15,7 @@
 				<h2 class="col-xs-12">Sign Changer</h2>
 			</div>
 			<div class="row">
-				<div class="col-xs-9">
+				<div class="col-xs-12">
 					<div class="row">
 						<h4 class="textarea-label">What The Sign Says</h4>
 					</div>
@@ -33,25 +33,13 @@
 					</div>
 					<div id="result_row" class="row"></div>
 				</div>
-				<div id="adsense-container" class="col-xs-3">
-					<p>If you found this tool useful, please consider donating! I thank you for your support!</p>
-					<div id="paypal_donation" class="row">
-						<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-							<input type="hidden" name="cmd" value="_s-xclick">
-							<input type="hidden" name="hosted_button_id" value="EASCAH6XTVHBW">
-							<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
-							<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-						</form>
-						
-					</div>
-				</div>
 			</div>
 			<footer>
 				Copyright &copy; 2014 &bull; <a href="http://overzealouspelican.com">OZP Development</a>
 			</footer>
 		</div>
 		<script type="text/javascript" src="js/jquery.mobile-1.4.0.min.js" ></script>
-		<script type="text/javascript" src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 		<script type="text/javascript" src="js/sign_changer.js"></script>
 	</body>
 </html>
