--- a/index.html
+++ b/index.html
@@ -4,12 +4,23 @@
 		<title>Sign Changer</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet" />
-		<link href="css/sign_changer.css" rel="stylesheet" />
+		<link href="http://sign_changer.overzealouspelican.com/css/sign_changer.css" rel="stylesheet" />
 		<meta name="description" content="Quickly Determine What Letters You Need To Change Your Slide In Letter Sign!"> 
 		<meta http-equiv="content-type" content="text/html;charset=UTF-8">
 		<meta name="keywords" content="sign letters,church signs,plastic letters,signboard,sign board">
+		<script type="text/javascript" src="http://code.jquery.com/mobile/1.4.0/jquery.mobile-1.4.0.min.js" ></script>
+		<script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="http://sign_changer.overzealouspelican.com/js/sign_changer.js"></script>
+		<script>
+			function onLoad(){
+          		document.addEventListener("deviceready", onDeviceReady, true);
+			}
+			function onDeviceReady(){
+				navigator.notification.alert("PhoneGap is working!!");
+			}
+		</script>
 	</head>
-	<body>
+	<body onload="onLoad();">
 		<div class="container">
 			<div class="row" id="header-row">
 				<h2 class="col-xs-12">Sign Changer</h2>
@@ -37,9 +48,6 @@
 			<footer>
 				Copyright &copy; 2014 &bull; <a href="http://overzealouspelican.com">OZP Development</a>
 			</footer>
-		</div>
-		<script type="text/javascript" src="js/jquery.mobile-1.4.0.min.js" ></script>
-		<script type="text/javascript" src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
-		<script type="text/javascript" src="js/sign_changer.js"></script>
+		</div>		
 	</body>
 </html>
