added themes to header and footer

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body>
 		<div data-role="page">
 	 
-	        <div data-role="header">
+	        <div data-role="header" data-theme="a">
 	            <h1>Sign Changer</h1>
 	        </div><!-- /header -->
 	 
@@ -35,7 +35,7 @@
 				</div>
 	        </div><!-- /content -->
 	 
-	        <div data-role="footer">
+	        <div data-role="footer" data-theme="a">
 	            <h4>Copyright &copy; 2014 &bull; <a href="http://overzealouspelican.com">OZP Development</a></h4>
 	        </div><!-- /footer -->
 	 
