--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Sign Changer</title>	
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">	
 		<link rel="stylesheet" href="css/bootstrap.min.css" />
-		<link rel="stylesheet" href="css/jquery.mobile-1.0rc1.min.css" />
+		<link rel="stylesheet" href="css/jquery.mobile.min.css" />
 		<link rel="stylesheet" href="css/sign_changer.css" />
 	</head>
 	<body>
@@ -41,7 +41,7 @@
 	 
 	    </div><!-- /page -->	
 		<script src="js/jquery.js"></script>
-		<script src="js/jquery.mobile-1.0rc1.min.js"></script>
+		<script src="js/jquery.mobile.min.js"></script>
 		<script src="js/bootstrap.min.js"></script>
 		<script src="js/sign_changer.js"></script>
 	</body>
