--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 	<head>		
 		<title>Sign Changer</title>	
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">	
-		<link rel="stylesheet" href="css/bootstrap.min.css" />
 		<link rel="stylesheet" href="css/jquery.mobile.min.css" />
-		<link rel="stylesheet" href="css/sign_changer.css" />
 	</head>
 	<body>
 		<div data-role="page">
@@ -15,24 +13,7 @@
 	        </div><!-- /header -->
 	 
 	        <div data-role="content">
-	            <div class="col-xs-12">
-					<div class="row">
-						<h4 class="textarea-label">What The Sign Says</h4>
-					</div>
-					<div class="row">
-						<textarea id="current_message" class="col-xs-12" rows="5"></textarea>
-					</div>
-					<div class="row">
-						<h4 class="textarea-label">What The Sign Should Say</h4>
-					</div>
-					<div class="row">
-						<textarea id="new_message" class="col-xs-12" rows="5"></textarea>
-					</div>
-					<div class="row">
-						<h4 class="textarea-label"><button id="results_button" class="btn btn-primary">Show Results</button></h4>
-					</div>
-					<div id="result_row" class="row"></div>
-				</div>
+	            <p>Content</p>
 	        </div><!-- /content -->
 	 
 	        <div data-role="footer" data-theme="a">
@@ -42,7 +23,5 @@
 	    </div><!-- /page -->	
 		<script src="js/jquery.js"></script>
 		<script src="js/jquery.mobile.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
-		<script src="js/sign_changer.js"></script>
 	</body>
 </html>
