--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<div data-role="page">
 	 
-	        <div data-role="header" data-theme="a">
+	        <div data-role="header" data-theme="a" data-position="fixed">
 	            <h1>Sign Changer</h1>
 	        </div><!-- /header -->
 	 
@@ -16,7 +16,7 @@
 	            <p>Content</p>
 	        </div><!-- /content -->
 	 
-	        <div data-role="footer" data-theme="a">
+	        <div data-role="footer" data-theme="a" data-position="fixed">
 	            <h4>Copyright &copy; 2014 &bull; <a href="http://overzealouspelican.com">OZP Development</a></h4>
 	        </div><!-- /footer -->
 	 
