Added input fields

--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
 	        </div><!-- /header -->
 	 
 	        <div data-role="content">
-	            <p>Content</p>
+	            <div data-role="fieldcontain">
+					<label for="textarea">Current Message:</label>
+					<textarea name="textarea" id="textarea"></textarea>
+				</div>
+				<div data-role="fieldcontain">
+					<label for="textarea">New Message:</label>
+					<textarea name="textarea" id="textarea"></textarea>
+				</div>
 	        </div><!-- /content -->
 	 
 	        <div data-role="footer" data-theme="a" data-position="fixed">
