--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 					<label for="textarea">New Message:</label>
 					<textarea name="textarea" id="textarea"></textarea>
 				</div>
+				<div data-role="fieldcontain">
+				<button>Show Result</button>
+				</div>
 	        </div><!-- /content -->
 	 
 	        <div data-role="footer" data-theme="a" data-position="fixed">
