--- a/index.html
+++ b/index.html
@@ -24,12 +24,8 @@
 				<div data-role="fieldcontain">
 					<button data-theme="a" onclick="showResults(); return false">Show Result</button>
 				</div>
-				<ul data-role="listview" data-inset="true" class="ui-listview ui-listview-inset ui-corner-all ui-shadow">
-					<li class="ui-li ui-li-static ui-btn-up-c ui-li-has-count ui-corner-top"><span class="letter">A <span class="counter ui-li-count ui-btn-up-c ui-btn-corner-all">12</span></li>
-					<li class="ui-li ui-li-static ui-btn-up-c ui-li-has-count">B <span class="ui-li-count ui-btn-up-c ui-btn-corner-all">0</span></li>
-					<li class="ui-li ui-li-static ui-btn-up-c ui-li-has-count">C <span class="ui-li-count ui-btn-up-c ui-btn-corner-all">4</span></li>
-					<li class="ui-li ui-li-static ui-btn-up-c ui-li-has-count">D <span class="ui-li-count ui-btn-up-c ui-btn-corner-all">328</span></li>
-					<li class="ui-li ui-li-static ui-btn-up-c ui-li-has-count ui-corner-bottom ui-li-last">Trash <span class="ui-li-count ui-btn-up-c ui-btn-corner-all">62</span></li>
+				<ul id="count-list" data-role="listview" data-inset="true" class="ui-listview ui-listview-inset ui-corner-all ui-shadow">
+					
 				</ul>
 	        </div><!-- /content -->
 	 
