--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 	<head>		
 		<title>Sign Changer</title>	
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">	
-		<link rel="stylesheet" href="css/jquery.mobile.min.css" />
+		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css">
 	</head>
 	<body>
-		<div data-role="page">
+		<div data-role="page" id="pageone">
 	 
 	        <div data-role="header" data-theme="a" data-position="fixed">
 	            <h1>Sign Changer</h1>
@@ -22,7 +22,7 @@
 					<textarea name="textarea" id="textarea"></textarea>
 				</div>
 				<div data-role="fieldcontain">
-					<button data-theme="a" onclick="showResults(); return false">Show Result</button>
+					<button data-theme="a" id="show-results-button">Show Result</button>
 				</div>
 				<ul id="count-list" data-role="listview" data-inset="true" class="ui-listview ui-listview-inset ui-corner-all ui-shadow">
 					
@@ -34,8 +34,8 @@
 	        </div><!-- /footer -->
 	 
 	    </div><!-- /page -->	
-		<script src="js/jquery.js"></script>
-		<script src="js/jquery.mobile.min.js"></script>
+		<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
+		<script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
 		<script src="js/sign_changer.js"></script>
 	</body>
 </html>
