Removed unnecessary files Added results display process

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 	        <div data-role="content">
 	            <div data-role="fieldcontain">
 					<label for="textarea">Current Message:</label>
-					<textarea name="textarea" id="textarea"></textarea>
+					<textarea name="textarea" id="current-message"></textarea>
 				</div>
 				<div data-role="fieldcontain">
 					<label for="textarea">New Message:</label>
-					<textarea name="textarea" id="textarea"></textarea>
+					<textarea name="textarea" id="new-message"></textarea>
 				</div>
 				<div data-role="fieldcontain">
 					<button data-theme="a" id="show-results-button">Show Result</button>
