--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 	<head>		
 		<title>Sign Changer</title>	
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">	
-		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css">
+		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" />
+		<link rel="stylesheet" href="/css/sign_changer.css" />
 	</head>
 	<body>
 		<div class="container">
@@ -13,14 +14,11 @@
 			<div class="row">
 				<div class="col-xs-12 col-md-6">
 					<h4 class="textarea-label">What The Sign Says</h4>
-					<textarea id="current_message" class="col-xs-12" rows="10"></textarea>
+					<textarea id="current_message" class="col-xs-12 message-field" rows="10"></textarea>
 				</div>
 				<div class="col-xs-12 col-md-6">
 					<h4 class="textarea-label">What The Sign Should Say</h4>
-					<textarea id="new_message" class="col-xs-12" rows="10"></textarea>
-				</div>
-				<div class="col-xs-12">
-					<h4 class="textarea-label" id="results-button-container"><button id="results_button" class="btn btn-primary col-xs-12 col-md-6 col-md-offset-3">Show Results</button></h4>
+					<textarea id="new_message" class="col-xs-12 message-field" rows="10"></textarea>
 				</div>
 				<div class="col-xs-12 col-md-6">
 					<h4>Letters Needed</h4>
@@ -34,12 +32,6 @@
 						<li>Nothing yet</li>
 					</ul>
 				</div>
-				<div data-role="fieldcontain">
-					<button data-theme="a" id="show-results-button">Show Result</button>
-				</div>
-				<ul id="count-list" data-role="listview" data-inset="true" class="ui-listview ui-listview-inset ui-corner-all ui-shadow">
-					
-				</ul>
 	        </div><!-- /content -->
 	 
 	        <div data-role="footer" data-theme="a" data-position="fixed">
@@ -47,8 +39,8 @@
 	        </div><!-- /footer -->
 	 
 	    </div><!-- /page -->	
-		<script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
-		<script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
-		<script src="js/sign_changer.js"></script>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" ></script>
+		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+		<script src="/js/sign_changer.js"></script>
 	</body>
 </html>
