--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 		<title>Sign Changer</title>	
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">	
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" />
+		<link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Montserrat' />
 		<link rel="stylesheet" href="/css/sign_changer.css" />
 	</head>
 	<body>
 		<div class="container">
-			<div class="row" id="header-row">
-				<h2 class="col-xs-12">OZP Sign Changer</h2>
+			<div class="col-xs-12" id="header-row">
+				<h2 class="col-xs-12">Sign Changer by Overzealous Pelican</h2>
 			</div>
 			<div class="row">
 				<div class="col-xs-12 col-md-6">
@@ -42,5 +43,14 @@
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" ></script>
 		<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 		<script src="/js/sign_changer.js"></script>
+		<script>
+		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		
+		  ga('create', 'UA-52699219-3', 'auto');
+		  ga('send', 'pageview');		
+		</script>
 	</body>
 </html>
