--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">	
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" />
 		<link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Montserrat' />
-		<link rel="stylesheet" href="/css/sign_changer.css" />
+		<link rel="stylesheet" href="css/sign_changer.css" />
 	</head>
 	<body>
 		<div class="container">
