--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Sign Changer</title>	
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">	
 		<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" />
-		<link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Montserrat' />
+		<link rel='stylesheet' href="https://fonts.googleapis.com/css?family=Montserrat" />
 		<link rel="stylesheet" href="/css/sign_changer.css" />
 	</head>
 	<body>
